# trex-usenix25

./: .gitignore  .internal-reference  Cargo.toml  Justfile  LICENSE  README.md
.docker/: .gitignore  Dockerfile  Makefile  README.md
benchmarks/: .gitignore  README.md
benchmarks/basic-test/: .gitignore  Dockerfile  Makefile
benchmarks/basic-test/evalfiles/: test-linked-list-slot1.binar.xz  test-linked-list-slot2.binar.xz
benchmarks/basic-test/src/: test-linked-list-slot1.c  test-linked-list-slot2.c
benchmarks/coreutils/: Dockerfile  Makefile  coreutils-9.3.tar.xz.sha256sum
benchmarks/spec/: Dockerfile  Makefile  config.patch  cpu2006-1_2.tar.xz.sha256sum
metrics/scorer/: Cargo.toml
metrics/scorer/src/: dsl.rs  lib.rs  main.rs  pointer_utils.rs  stats.rs  term_once.rs  utils.rs
metrics/standardized-scoring/: Cargo.toml
metrics/standardized-scoring/src/: main.rs
metrics/summarize/: common.py  requirements.txt  summarize_binary_scores.py  summarize_score_counts.py  summarize_stdmetrics.py
tools/baselinetrivial/: Cargo.toml
tools/baselinetrivial/src/: main.rs
tools/evaluating_resym/: README.md  convert_to_resym_fielddecoder_input_format.py  convert_to_resym_vardecoder_input_format.py  fielddecoder_inf.py  process_resym_output.py  requirements.txt  vardecoder_inf.py
utils/: run_command_on_remote.sh
utils/ghidra_headless_scripts/: .classpath  .gitignore  .project
utils/ghidra_headless_scripts/src/: TypesDump.java  (+3 more)
utils/runner/: Cargo.toml  runner-skip-files
utils/runner/src/: cache.rs  job.rs  main.rs
utils/types2st/: Cargo.toml
(+1 files in other folders)
