[package]
name = "standardized-scoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
fs2 = "0.4.3"
trex = { path = "../../trex/trex" }
scorer = { path = "../scorer" }
macro_rules_attribute = "0.1.2"
once_cell = "1.12.0"
slog-scope = "4.4.0"
