[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
blake3 = "1.3.3"
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "history", "completion"] }
glob = "0.3.1"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
parse-display = "0.8.0"
strum = { version = "0.24.1", features = ["derive"] }
clap = { version = "3.0.5", features = ["derive"] }
thiserror = "1.0.40"
once_cell = "1.18.0"
sysinfo = { version = "0.29.5", default-features = false }
ctrlc = "3.4.0"
